--- a/decencyproject.us/styles/main.css
+++ b/decencyproject.us/styles/main.css
@@ -143,7 +143,9 @@ div.nav-social {
 	width: auto;
 	text-align: center;
 }
-
+.center {
+	text-align: center;
+}
 .social-charm {
 	display: inline-block;
 	margin-top: 20px;
@@ -250,6 +252,7 @@ a {
 	margin-bottom: 0px;
 	transition: ease 0.4s;
 	text-align: center;
+	border-radius: 16px;
 }
 .join-link:hover {
 	opacity: 0.7;
